Добавлено MapStruct для Restaurant, Menu, так же RestControllerAdvice, бизнес-exception, тесты