@@ -1,16 +1,16 @@
 package com.fooddelivery.users.controller;
 
-import com.fooddelivery.users.Mapper.UserMapper;
 import com.fooddelivery.users.domain.Role;
 import com.fooddelivery.users.domain.User;
 import com.fooddelivery.users.domain.UserProfileHistory;
-import com.fooddelivery.users.domain.UserStatus;
 import com.fooddelivery.users.dto.UserCreateRequest;
 import com.fooddelivery.users.dto.UserHistoryResponse;
 import com.fooddelivery.users.dto.UserResponse;
 import com.fooddelivery.users.dto.UserUpdateRequest;
+import com.fooddelivery.users.mapper.UserMapper;
 import com.fooddelivery.users.service.UserService;
 import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -20,73 +20,53 @@ import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static com.fooddelivery.users.Mapper.UserMapper.toHistoryResponse;
-import static com.fooddelivery.users.Mapper.UserMapper.toResponse;
-
-
-// todo так же оптимизировать как в ресторане
 @RestController
 @RequestMapping("/users")
+@RequiredArgsConstructor
 public class UserController {
 
     private final UserService userService;
+    private final UserMapper userMapper;
 
-    public UserController(UserService userService) {
-        this.userService = userService;
-    }
-    //Любой
     @PostMapping
     public ResponseEntity<UserResponse> createUser(@Valid @RequestBody UserCreateRequest request) {
-        User user = new User();
-        user.setName(request.getName());
-        user.setEmail(request.getEmail());
-        user.setRole(request.getRole() != null ? request.getRole() : Role.USER);
-        user.setStatus(UserStatus.ACTIVE);
-
+        User user = userMapper.toEntity(request);
+        if (user.getRole() == null) {
+            user.setRole(Role.USER);
+        }
         User created = userService.createUser(user);
-        return ResponseEntity.status(HttpStatus.CREATED).body(toResponse(created));
+        return ResponseEntity.status(HttpStatus.CREATED).body(userMapper.toResponse(created));
     }
 
-    //Админ
     @GetMapping("/{id}")
     public ResponseEntity<UserResponse> getUser(@PathVariable Long id) {
         User user = userService.getById(id);
-        return ResponseEntity.ok(toResponse(user));
+        return ResponseEntity.ok(userMapper.toResponse(user));
     }
 
-    //Админ тольео может банить и менять роль, остально Юзер
     @PutMapping("/{id}")
     public ResponseEntity<UserResponse> updateUser(@PathVariable Long id,
                                                    @Valid @RequestBody UserUpdateRequest request) {
-        User updatedData = new User();
-        updatedData.setName(request.getName());
-        updatedData.setEmail(request.getEmail());
-        updatedData.setRole(request.getRole());
-        updatedData.setStatus(request.getStatus());
-
-        User updated = userService.updateUser(id, updatedData);
-        return ResponseEntity.ok(toResponse(updated));
+        User updated = userService.updateUser(id, request);
+        return ResponseEntity.ok(userMapper.toResponse(updated));
     }
 
-    //Админ
     @GetMapping
     public ResponseEntity<List<UserResponse>> getByRole(@RequestParam Role role) {
         List<User> users = userService.findByRole(role);
         List<UserResponse> responses = users.stream()
-                .map(UserMapper::toResponse)
-                .collect(Collectors.toList());
+                .map(userMapper::toResponse)
+                .toList();
         return ResponseEntity.ok(responses);
     }
-    //Админ
+
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deactivateUser(@PathVariable Long id) {
         userService.deactivateUser(id);
         return ResponseEntity.noContent().build();
     }
 
-    //Админ
     @GetMapping("/{id}/history")
     public ResponseEntity<UserHistoryResponse> getHistoryAt(
             @PathVariable Long id,
@@ -95,23 +75,20 @@ public class UserController {
         Instant instant = at.atZone(ZoneId.systemDefault()).toInstant();
         UserProfileHistory snapshot = userService.getStateAt(id, instant);
         if (snapshot != null) {
-            UserHistoryResponse response = toHistoryResponse(snapshot.getUserId(), snapshot.getName(), snapshot.getEmail(),
-                    snapshot.getRole(), snapshot.getStatus(), snapshot.getRecordedAt());
+            UserHistoryResponse response = userMapper.toHistoryResponse(snapshot);
             return ResponseEntity.ok(response);
         }
         User current = userService.getById(id);
-        UserHistoryResponse response = toHistoryResponse(current.getId(), current.getName(), current.getEmail(),
-                current.getRole(), current.getStatus(), null);
+        UserHistoryResponse response = userMapper.toHistoryResponse(current);
         return ResponseEntity.ok(response);
     }
 
-    //Админ
     @GetMapping("/{id}/history/versions")
     public ResponseEntity<List<UserHistoryResponse>> getHistoryVersions(@PathVariable Long id) {
         userService.getById(id);
         List<UserHistoryResponse> list = userService.getHistory(id).stream()
-                .map(history -> toHistoryResponse(history.getUserId(), history.getName(), history.getEmail(), history.getRole(), history.getStatus(), history.getRecordedAt()))
-                .collect(Collectors.toList());
+                .map(userMapper::toHistoryResponse)
+                .toList();
         return ResponseEntity.ok(list);
     }
 }
